namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accuknox
  labels:
    env: dev
